# libdiscovergy

./: CMakeLists.txt  README.md  libdiscovergyConfig.cmake.in  libmysmartgridConfig.cmake.in
libdiscovergy/: CMakeLists.txt  error.h  webclient.cpp  webclient.h
libmysmartgrid/: .error.h.swp  .webclient.cpp.swp  .webclient.h.swp  CMakeLists.txt  error.h  webclient.cpp  webclient.h
src/: CMakeLists.txt  get_sensor.cpp  heartbeat.cpp  post_sensor.cpp
